All images put into place. Need more descriptions.

--- a/src/assets/sass/_signup.scss
+++ b/src/assets/sass/_signup.scss
@@ -6,7 +6,7 @@
       #{fade-out($black, 0.5)} 75%,
       $black 100%
     ),
-    url('../images/bg-signup.jpg');
+    url('../images/amp_code.png');
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
