--- a/src/assets/sass/_masthead.scss
+++ b/src/assets/sass/_masthead.scss
@@ -10,7 +10,7 @@
       #{fade-out($black, 0.3)} 75%,
       $black 100%
     ),
-    url('../images/bg-masthead.jpg');
+    url('../images/amp_code.png');
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
